--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ body {
 
 h1 {
 	color: #c19bf5;
-	font-size: 2vw;
+	font-size: 12px;
 	position: relative;
 	text-transform: uppercase;
 	-webkit-text-stroke: 0.3vw #f7f7fe;
